<resources>
    <string name="app_name">Budget Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_transaction_details">Transaction Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_total_budget">Total Budget</string>
    <string name="str_title">Title</string>
    <string name="title_amount">Amount</string>
    <string name="title_category">Category</string>
    <string name="title_create_category">Create Category</string>
    <string name="title_update_category">Update Category</string>
    <string name="title_categories">Categories</string>
    <string name="title_date">Date</string>
    <string name="title_create_transaction">Create Transaction</string>
    <string name="title_update_transaction">Update Transaction</string>
    <string name="title_create">Create</string>
    <string name="title_update">Update</string>
    <string name="title_transaction_type">Transaction Type</string>
    <string name="title_category_name">Category Name</string>
    <string name="title_category_icon">Category Icon</string>
    <string name="select_category_icon">Select Category Icon</string>
    <string name="title_no_categories_found">No Categories Found</string>
    <string name="title_notes">Notes</string>
    <string name="enter_transaction_title">Enter transaction title</string>
    <string name="title_enter_amount">Enter amount</string>
    <string name="title_transaction_description">Transaction Description</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="title_created_on">Created On</string>
    <string name="title_transaction_notes">Transaction Notes</string>
    <string name="title_transaction_date">Transaction Date</string>
    <string name="title_recent_transactions">Recent Transactions</string>
    <string name="title_cash_in_hand">Cash In Hand</string>
    <string name="title_dark_mode">Dark Mode</string>
    <string name="title_month">Month</string>
    <string name="title_clear_filter">Clear Filter</string>
    <string name="title_monthly_summary">Monthly Summary</string>
</resources>