<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/offWhite">

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/title_edit"
            app:layout_constraintEnd_toStartOf="@+id/ntnDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ntnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="#FF0000"
            android:text="@string/title_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnEdit"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_top_curved"
            android:padding="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEdit">

            <TextView
                android:id="@+id/tv1"
                style="@style/medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing=".1"
                android:text="@string/str_title"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTransTitle"
                style="@style/semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />


            <TextView
                android:id="@+id/tv2"
                style="@style/medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:letterSpacing=".1"
                android:text="@string/title_amount"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTransTitle" />

            <TextView
                android:id="@+id/tvTransAmount"
                style="@style/semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv2" />


            <TextView
                android:id="@+id/tv3"
                style="@style/medium_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:letterSpacing=".1"
                android:text="@string/title_transaction_type"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintEnd_toStartOf="@+id/tv4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTransAmount" />

            <TextView
                android:id="@+id/tv4"
                style="@style/medium_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="end"
                android:letterSpacing=".1"
                android:text="@string/title_category"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv3"
                app:layout_constraintTop_toBottomOf="@+id/tvTransAmount" />

            <TextView
                android:id="@+id/tvTransType"
                style="@style/semi_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toStartOf="@+id/tvTransCategory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv3" />

            <TextView
                android:id="@+id/tvTransCategory"
                style="@style/semi_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvTransType"
                app:layout_constraintTop_toBottomOf="@+id/tv4" />


            <TextView
                android:id="@+id/tv5"
                style="@style/medium_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:letterSpacing=".1"
                android:text="@string/title_transaction_date"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintEnd_toStartOf="@+id/tv6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTransType" />

            <TextView
                android:id="@+id/tv6"
                style="@style/medium_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="end"
                android:letterSpacing=".1"
                android:text="@string/title_created_on"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv5"
                app:layout_constraintTop_toBottomOf="@+id/tvTransCategory" />

            <TextView
                android:id="@+id/tvTransDate"
                style="@style/semi_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toStartOf="@+id/tvCreatedOn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv5" />

            <TextView
                android:id="@+id/tvCreatedOn"
                style="@style/semi_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textAllCaps="true"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvTransDate"
                app:layout_constraintTop_toBottomOf="@+id/tv6" />


            <TextView
                android:id="@+id/tv7"
                style="@style/medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:letterSpacing=".1"
                android:text="@string/title_transaction_notes"
                android:textAllCaps="true"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTransDate" />

            <TextView
                android:id="@+id/tvNotes"
                style="@style/semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv7" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>