<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteToGrey">

        <LinearLayout
            android:id="@+id/lnrFilter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/lnrCategory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <TextView
                    style="@style/medium_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/title_category"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_8sdp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:strokeColor="@color/blackToWhite"
                    app:strokeWidth=".5dp">

                    <Spinner
                        android:id="@+id/spnCategory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <TextView
                    style="@style/medium_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/title_month"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_8sdp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:strokeColor="@color/blackToWhite"
                    app:strokeWidth=".5dp">

                    <Spinner
                        android:id="@+id/spnMonth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnrMonthlySummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnrFilter"
            android:visibility="gone"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg_curved"
            android:orientation="vertical">

            <TextView
                style="@style/semi_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:letterSpacing=".2"
                android:id="@+id/tvMonthlySummary"
                android:text="@string/title_monthly_summary"
                android:textAllCaps="true"
                android:textSize="@dimen/_9sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:gravity="center_vertical|center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_5sdp">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_income" />

                <TextView
                    style="@style/semi_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:gravity="center_horizontal"
                    android:id="@+id/tvTotalIncome"
                    android:textSize="@dimen/_11sdp" />


                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_expense" />

                <TextView
                    style="@style/semi_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:gravity="center_horizontal"
                    android:id="@+id/tvTotalExpense"
                    android:textSize="@dimen/_11sdp" />

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_rupee" />

                <TextView
                    style="@style/semi_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:gravity="center_horizontal"
                    android:id="@+id/tvBalance"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvTransactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lnrMonthlySummary"
            android:overScrollMode="never" />

        <TextView
            android:id="@+id/tvNoResult"
            style="@style/medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="No Transaction Records Found"
            android:textAllCaps="true"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/lnrClrFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:background="@drawable/bg_curved"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:visibility="gone">

            <TextView
                style="@style/medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="No Transaction Records Found"
                android:textAllCaps="true"
                android:textSize="@dimen/_10sdp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClearFilter"
                style="@style/medium_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/primary_color"
                android:text="@string/title_clear_filter"
                android:textColor="#FFFFFF" />

        </LinearLayout>


    </RelativeLayout>
</layout>